OSN-179. Refactor UI components to improve rendering and code structure
The main goal for changes - reduce DOM elements amount rendered in the CleanExpenses (/resources) table

- Updated CaptionedCell, CloudLabel, and other components to use more flexible rendering
- Simplified component logic and improved type safety
- Enhanced copy text, expense cell, and resource cell components
- Introduced new rendering patterns for tags, network traffic, and other UI elements

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -2283,7 +2283,7 @@
   "timespanTo": "Timespan to",
   "to": "To",
   "toConfirmTheDeletionOfOrganization": "To confirm the deletion of this organization, type <i>{confirmationText}</i> in the box.",
-  "toConnectGoogleCalendarToOptScale": "To connect Google Calendar to OptScale, perform the following:{br}1. Create or choose one of the existing secondary calendars in your Google Calendar.{br}2. Share it with OptScale service account: {br}<strong>{link}</strong>3. Paste calendar ID below.",
+  "toConnectGoogleCalendarToOptScale": "To connect Google Calendar to OptScale, perform the following:{br}1. Create or choose one of the existing secondary calendars in your Google Calendar.{br}2. Share it with OptScale service account: {br}<strong>{link}</strong>{br}3. Paste calendar ID below.",
   "toMe": "To me",
   "toSomeoneElse": "To someone else",
   "toX": "To: {value}",
@@ -2380,6 +2380,7 @@
   "value(default)": "{value} (default)",
   "value(parenthesisValue)": "{value} ({parenthesisValue})",
   "value/value": "{value1}/{value2}",
+  "value: value": "{value1}: {value2}",
   "valueAgo": "{value} ago",
   "valueDays": "{symbol}{value}d",
   "valueExpenses": "{value} expenses",
