OSN-622. Update GCP account connection tiles and translation

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -831,7 +831,7 @@
   "fromX": "From: {value}",
   "fullName": "Full name",
   "garbageCollector": "Garbage Collector",
-  "gcp": "Google Cloud",
+  "gcp": "Google Cloud platform",
   "gcpTenant": "Google Cloud tenant",
   "general": "General",
   "generateLink": "Generate public link",
