--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -291,8 +291,8 @@
   "cloud": "Cloud",
   "cloudConnectionBackdropMessage": "Connection will not take more than several minutes.",
   "cloudConnectionsTitle": "Cloud Connections",
-  "cloudCostComparisonCurrencyDescription": "The expenses will be calculated in USD when the cloud provider does not support the selected currency.",
-  "cloudCostComparisonDescription": "Here you can overview the specifications and pricing of sizes across different cloud providers.{br}Please note that the data is obtained from a cloud provider APIs and may not be entirely accurate due to potential delays or discrepancies.",
+  "cloudCostComparisonCurrencyDescription": "The expenses will be calculated in the preferred cloud provider currency (USD in most cases) if the selected currency is not supported.",
+  "cloudCostComparisonDescription": "Filter and compare the specifications and pricing of cloud provider sizes based on your needs.{br}The data is retrieved from provider APIs and may not always be immediately updated due to possible delays.{br}Depending on your filter selections, loading times may vary.",
   "cloudCostComparisonTitle": "Cloud Cost Comparison",
   "cloudCredentialId": "Cloud credential id",
   "cloudCredentialName": "Cloud credential name",
@@ -831,6 +831,7 @@
   "fromX": "From: {value}",
   "fullName": "Full name",
   "garbageCollector": "Garbage Collector",
+  "gcp": "GCP",
   "gcpProject": "Google Cloud project",
   "gcpTenant": "Google Cloud tenant",
   "general": "General",
