OSN-696. Add Alibaba support to Cloud Cost Comparison

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -99,10 +99,11 @@
   "algorithmSummary": "Algorithm summary",
   "algorithms": "Algorithms",
   "aliases": "Aliases",
-  "alibaba": "Alibaba Cloud",
+  "alibaba": "Alibaba",
   "alibabaAccessKeyId": "Alibaba Cloud Access key ID",
   "alibabaAccessKeyIdTooltip": "Access key ID from RAM user. Can be found on Resource Access Management > Users > <i>your_user</i> > User AccessKeys page on Alibaba Cloud console and in <i>AccessKey.csv</i> downloaded during access key creation.",
   "alibabaAccountId": "Alibaba Cloud Account ID",
+  "alibabaCloud": "Alibaba Cloud",
   "alibabaSecretAccessKey": "Alibaba Cloud Secret access key",
   "alibabaSecretAccessKeyTooltip": "Secret access key from RAM user. Can be found in <i>AccessKey.csv</i> downloaded during access key creation.",
   "all": "All",
