--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -82,6 +82,7 @@
   "addTaskTitle": "Add Task",
   "addToComparison": "Add to comparison",
   "addToSlack": "Add to Slack",
+  "addTrigger": "Add trigger",
   "addedAt": "Added at",
   "additionalRoles": "Additional roles",
   "advanced": "Advanced",
@@ -953,8 +954,6 @@
   "instanceMigrationDescription": "Some of your active instances can cost less with the same size in another geographically closer region. Consider their migration to the recommended region to reduce expenses.",
   "instanceMigrationResourceRecommendation": "This instance has {size} size which is cheaper in `{regionName}` region. Consider its migration to the recommended region to reduce expenses.",
   "instanceMigrationTitle": "Instances with migration opportunities",
-  "instancePowerOff": "Instance power off",
-  "instancePowerOn": "Instance power on",
   "instanceSize": "Instance size",
   "instanceSubscription": "Subscription instances",
   "instanceSubscriptionDescription": "Some of your active instances have been detected as sustainable (for more than <strong>90 days</strong>) compute consumers but have not been covered with Subscription or Saving Plans. Consider purchasing Subscriptions to save on compute usage.",
@@ -1526,7 +1525,9 @@
   "obsoleteSnapshotsDescription": "Some snapshots have not been used for the last <strong>{daysThreshold} {daysThreshold, plural,\n  =1 {day}\n other {days}\n}</strong>. Consider their deletion to save on snapshot storage expenses.",
   "obsoleteSnapshotsResourceRecommendation": "This snapshot has not been used for a while. Consider its deletion to reduce expenses.",
   "obsoleteSnapshotsTitle": "Obsolete Snapshots",
+  "off": "Off",
   "ok": "Ok",
+  "on": "On",
   "onSchedule": "On schedule",
   "onlyAccessibleByMe": "Only accessible by me",
   "onlyAwsLinkedAccountsConnectedWarning": "AWS Root Account is missing. AWS Linked Account relies on billing data from its AWS Root Account. {hasPermissionsToConnectDataSources, select,\n true {Please connect the appropriate AWS Root Account}\n false {Please contact your organization manager to connect the appropriate AWS Root Account}\n other {Please connect the appropriate AWS Root Account}}.",
@@ -1656,6 +1657,8 @@
   "possibleSavingsWithSpotInstancesTitle": "Instances with Spot (Preemptible) opportunities",
   "possibleShutdownPeriods": "Possible shutdown periods",
   "postRequests": "POST requests",
+  "powerOff": "Power off",
+  "powerOn": "Power on",
   "powerSchedule": "Power schedule",
   "powerSchedulesTitle": "Power Schedules",
   "preferredCurrency": "Preferred currency",
@@ -2321,6 +2324,9 @@
   "trainingSetTimespan": "Training set timespan",
   "trainingTimespan": "Training timespan",
   "trialExpiration": "Your trial will expire in 14 days",
+  "triggerTimes": "Trigger times",
+  "triggers": "Triggers",
+  "triggersDescription": "Triggers define specific times when an instance automatically turns on or off based on the schedule. Instances must be assigned to the schedule for triggers to take effect.{br}Note: OptScale does not guarantee that the actual instance state will persist between triggers, as it may be changed via other means, including manual restarts.",
   "trustedBy": "Trusted by",
   "ttl": "TTL",
   "ttlAnalysis": "TTL Analysis",
