--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -26,6 +26,10 @@
   "abandonedKinesisStreamsDescription": "The following Kinesis Streams have provisioned Shard capacity but have not performed data operations for the last <strong>{daysThreshold} {daysThreshold, plural,\n  =1 {day}\n other {days}\n}</strong>. Consider their removal to reduce expenses.",
   "abandonedKinesisStreamsResourceRecommendation": "This Kinesis Stream has not been used for a while. Consider its deletion to reduce expenses.",
   "abandonedKinesisStreamsTitle": "Abandoned Kinesis Streams",
+  "abandonedLoadBalancers": "Abandoned load balancers",
+  "abandonedLoadBalancersDescription": "Some of your active load balancers have been detected as abandoned (average bytes sent is less than <strong>{bytesSentThreshold}</strong> and average packets sent is less than <strong>{packetsSendThreshold}</strong> for the last <strong>{daysThreshold} {daysThreshold, plural,\n  =1 {day}\n other {days}\n}</strong>). Consider their termination to reduce expenses.",
+  "abandonedLoadBalancersResourceRecommendation": "This load balancer is detected as abandoned. Consider its termination to reduce expenses.",
+  "abandonedLoadBalancersTitle": "Abandoned Load Balancers",
   "abandonedNebiusS3Buckets": "Abandoned Nebius S3 buckets",
   "abandonedNebiusS3BucketsDescription": "Some of your active Nebius S3 buckets have been detected as abandoned (average data size has been less than <strong>{dataSizeAvg} {dataSizeAvg, plural,\n =1 {megabyte}\n other {megabytes}}</strong>, GET requests quantity has been less than <strong>{getRequestsQuantity}</strong>, POST requests quantity has been less than <strong>{postRequestsQuantity}</strong>, PUT requests quantity has been less than <strong>{putRequestsQuantity}</strong>, HEAD requests quantity has been less than <strong>{headRequestsQuantity}</strong>, OPTIONS requests quantity has been less than <strong>{optionsRequestsQuantity}</strong>, and DELETE requests quantity has been less than <strong>{deleteRequestsQuantity}</strong> for the last <strong>{daysThreshold} {daysThreshold, plural,\n  =1 {day}\n other {days}\n}</strong>). Consider their deletion to reduce expenses.",
   "abandonedNebiusS3BucketsResourceRecommendation": "This Nebius S3 bucket is detected as abandoned. Consider its termination to reduce expenses.",
@@ -235,6 +239,8 @@
   "businessLogin": "Business email (login)",
   "businessUnit": "Business Unit",
   "buy": "Buy",
+  "bytesSent": "Bytes sent",
+  "bytesSentAverage": "Bytes sent (average)",
   "calendar": "Calendar",
   "calendarConnected": "Calendar is connected",
   "calendarId": "Calendar ID",
@@ -1578,6 +1584,8 @@
   "overview": "Overview",
   "owned": "Owned",
   "owner": "Owner",
+  "packetsSent": "Packets sent",
+  "packetsSentAverage": "Packets sent (average)",
   "pageIsUnavailable": "Page \"{value}\" is unavailable",
   "paidNetworkTraffic": "Paid network traffic",
   "paidNetworkTrafficFrom": "Paid network traffic from",
@@ -1853,6 +1861,7 @@
   "resourceType.instance": "Instance",
   "resourceType.ipAddress": "IP Address",
   "resourceType.k8sPod": "K8s Pod",
+  "resourceType.loadBalancer": "Load Balancer",
   "resourceType.rdsInstance": "RDS Instance",
   "resourceType.snapshot": "Snapshot",
   "resourceType.snapshotChain": "Snapshot Chain",
@@ -2245,6 +2254,9 @@
   "thresholds.abandonedInstances.listItem1": "its average CPU consumption is less than {input} %",
   "thresholds.abandonedInstances.listItem2": "its average network traffic is less than {input} bytes/s",
   "thresholds.abandonedKinesisStreams": "Consider a Kinesis Data Stream abandoned if it has not performed data operations for the last {input} days",
+  "thresholds.abandonedLoadBalancers.1.bytesSentThreshold": "its average bytes sent is less than {input}",
+  "thresholds.abandonedLoadBalancers.2.packetsSentThreshold": "its average packets sent is less than {input}",
+  "thresholds.abandonedLoadBalancers.intro": "Consider a Load Balancer abandoned if for the last {input} days",
   "thresholds.abandonedNebiusS3Buckets.dataSizeThreshold": "its average data size has been less than {input} megabytes",
   "thresholds.abandonedNebiusS3Buckets.deleteRequestsQuantityThreshold": "its DELETE requests quantity has been less than {input}",
   "thresholds.abandonedNebiusS3Buckets.getRequestsQuantityThreshold": "its GET requests quantity has been less than {input}",
