OSN-718. Add organization disabled status and enhance action restrictions

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -929,6 +929,7 @@
   "inactive": "Inactive",
   "inactiveConsoleUsersDescription": "The following active IAM users have console access turned on but have not been using it for more than <strong>{daysThreshold} {daysThreshold, plural,\n  =1 {day}\n other {days}\n}</strong>. Consider revoking console access to increase security.",
   "inactiveConsoleUsersTitle": "IAM users with unused console access",
+  "inactiveOrganization": "This organization is inactive. No processing (e.g., report imports, recommendation runs) will occur, and all data is read-only. Please contact your organization manager to reactivate it.",
   "inactiveUsersDescription": "The following IAM users are inactive for more than <strong>{daysThreshold} {daysThreshold, plural,\n  =1 {day}\n other {days}\n}</strong>. Consider their deletion.",
   "inactiveUsersTitle": "Inactive IAM users",
   "includeAll": "Include all",
@@ -1495,6 +1496,7 @@
   "nonEmpty": "Non-empty",
   "none": "None",
   "nos": "Nos",
+  "notAvailableForInactiveOrganization": "Not available for inactive organizations",
   "notAvailableInLiveDemo": "Not available in live demo",
   "notAvailableOnYourSetup": "Not available on your setup.{br}Please contact {email}.",
   "notContainAnyValidEmails": "List of invitees does not contain any valid emails",
@@ -1543,7 +1545,7 @@
   "openFilter": "Open filter",
   "openPorts": "Open ports",
   "openShareSettings": "Open expenses export settings",
-  "openSourceAnnouncement": "Please consider giving OptScale a <star>Star</star> on GitHub, it is 100% open-source. It would increase its visibility to others and expedite product development. Thank you!",
+  "openSourceAnnouncement": "Please consider giving OptScale a <star>Star</star> on GitHub, it is 100% open-source. It would increase its visibility to others and expedite product development. Thank you!",
   "optScalePrivacyPolicy": "OptScale Privacy Policy",
   "optScaleSlackIntegrationTitle": "OptScale Slack Integration",
   "optimal": "Optimal",
