OSN-749. Enhance ResourceMetrics to include "Disk I/O usage" and consolidated "Disk I/O" metrics
- Added new metrics for Disk I/O usage and consolidated Disk I/O in ResourceMetrics component.
- Updated chart properties and constants to support new metrics.

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -622,6 +622,9 @@
   "discovery": "Discovery",
   "discussion": "Discussion",
   "diskIO": "Disk I/O",
+  "diskIOAverage": "Disk I/O (average)",
+  "diskIOUsage": "Disk I/O usage",
+  "diskIOUsageAverage": "Disk I/O usage (average)",
   "diskInput": "Disk input",
   "diskOutput": "Disk output",
   "diskRead": "Disk read",
@@ -950,6 +953,7 @@
   "inputMustContainOnlyUppercaseLatinLettersNumberOrUnderscore": "{inputName} must contain only uppercase latin letters, numbers, or underscore",
   "inputMustNotBeginWithNumbers": "{inputName} must not begin with numbers",
   "inputOutput": "Input/Output",
+  "inputOutputOperationsPerSecond": "{value} IOPS",
   "insecurePorts": "Insecure ports",
   "insecureSecurityGroupsDescription": "Some active instances have attached Security Groups with inbound ports that considered insecure. Consider changing Security Groups, restricting these ports only to a specific IP range to increase security.",
   "insecureSecurityGroupsResourceRecommendation": "This instance has attached Security Group {groupName} with inbound ports that considered insecure. Consider changing Security Group, restricting these ports only to a specific IP range to increase security.",
