OSN-771. Add maximum runset runners feature to MlRunsetTemplate
- Introduced a new field for maximum runset runners in the MlRunsetTemplate component.
- Updated related components and forms to handle the new maximum runset runners parameter.
- Updated translations to include the new label for maximum runset runners.

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -1142,6 +1142,7 @@
   "maximumParallelRuns": "Maximum parallel runs",
   "maximumPossibleLimitWithoutExtendingParent": "Remaining budget: {unallocatedLimit}. Extend parent budget if necessary.",
   "maximumRunsetBudget": "Maximum runset budget",
+  "maximumRunsetRunners": "Maximum runset runners",
   "member": "Member",
   "memory": "Memory",
   "memoryAverage": "Memory (average)",
