OSN-623. Refactor data source connection form structure
Refactor the form structure by displaying only cloud types in the cards. Subtypes are moved inside the form instead of being displayed on the main page.

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -2171,6 +2171,7 @@
   "subResources": "Sub Resources",
   "submit": "Submit",
   "subscribeMeToTheMonthlyNewsletter": "Subscribe me to the FinOps and MLOps monthly newsletter",
+  "subscription": "Subscription",
   "subscriptionId": "Subscription ID",
   "subscriptionIdTooltip": "Subscription ID to which OptScale will connect. Can be found on a corresponding subscription page in Azure cloud portal.",
   "success": "Success",
@@ -2231,6 +2232,7 @@
   "team": "Team",
   "templateInformation": "Template information",
   "templateUrl": "Template URL",
+  "tenant": "Tenant",
   "tendency": "Tendency",
   "tensorflow": "TensorFlow",
   "terminatePrepared": "Termination prepared",
