OSN-768. Add support for Azure billing exports
* Added new fields to Azure subscription configuration, including export_name, container, directory, and support for billing export.
* Updated forms and GraphQL schemas to accommodate these changes

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -783,6 +783,7 @@
   "expiringBudgetColumnName": "Budget ⟶ Actual expenses",
   "expiringBudgetPolicyDescription": "Total expenses from <strong>{startDate}</strong> must not exceed <strong>{budget}</strong>.",
   "exportName": "Export name",
+  "exportNameDescription": "Name of the Cost Management export. Can be found in the Azure portal under the corresponding export settings.",
   "exportPathPrefix": "Export path prefix",
   "exportPathPrefixTooltip": "Export path prefix in Amazon S3 bucket that you want to prepend to the name of your report files.",
   "exportS3BucketName": "Export Amazon S3 bucket name",
@@ -2167,6 +2168,12 @@
   "stopped": "Stopped",
   "storage": "Storage",
   "storageAccount": "Storage account",
+  "storageAccountConnectionString": "Storage account connection string",
+  "storageAccountConnectionStringDescription": "Connection string is used to access a storage account where exported cost reports are stored. Can be found on a storage account page in Azure cloud portal under Security + Networking > Access Keys.",
+  "storageContainer": "Storage container",
+  "storageContainerDescription": "Name of a container where exported cost reports are stored.",
+  "storageDirectory": "Storage directory",
+  "storageDirectoryDescription": "Name of a directory inside a storage container where exported cost reports are stored.",
   "strategy": "Strategy",
   "subResources": "Sub Resources",
   "submit": "Submit",
@@ -2387,6 +2394,8 @@
   "usage": "Usage",
   "useAwsEdpDiscount": "Use AWS Enterprise Discount Program (EDP)",
   "useAwsEdpDiscountDescription": "Use this option to apply any available discounts under your AWS Enterprise Discount Program (EDP) agreement.",
+  "useBillingExport": "Use billing export",
+  "useBillingExportDescription": "Enables the use of Cost Management export as an alternative way to retrieve expense data if the Consumption API is unavailable. An export must be created in the Azure portal before connecting it to OptScale, as OptScale does not create exports but only uses the ones provided.",
   "used": "Used",
   "usedAliases": "Used aliases",
   "user": "User",
