OSN-783. Support Load Balancers recommendation for AWS cloud

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -27,7 +27,7 @@
   "abandonedKinesisStreamsResourceRecommendation": "This Kinesis Stream has not been used for a while. Consider its deletion to reduce expenses.",
   "abandonedKinesisStreamsTitle": "Abandoned Kinesis Streams",
   "abandonedLoadBalancers": "Abandoned load balancers",
-  "abandonedLoadBalancersDescription": "Some of your active load balancers have been detected as abandoned (average bytes sent is less than <strong>{bytesSentThreshold}</strong> and average packets sent is less than <strong>{packetsSendThreshold}</strong> for the last <strong>{daysThreshold} {daysThreshold, plural,\n  =1 {day}\n other {days}\n}</strong>). Consider their termination to reduce expenses.",
+  "abandonedLoadBalancersDescription": "Some of your active load balancers have been detected as abandoned (average bytes sent is less than <strong>{bytesSentThreshold}</strong>, average packets sent is less than <strong>{packetsSendThreshold}</strong>, and average requests is less than <strong>{requestsThreshold}</strong> for the last <strong>{daysThreshold} {daysThreshold, plural,\n  =1 {day}\n other {days}\n}</strong>). Consider their termination to reduce expenses.",
   "abandonedLoadBalancersResourceRecommendation": "This load balancer is detected as abandoned. Consider its termination to reduce expenses.",
   "abandonedLoadBalancersTitle": "Abandoned Load Balancers",
   "abandonedNebiusS3Buckets": "Abandoned Nebius S3 buckets",
@@ -1823,6 +1823,7 @@
   "requested": "Requested",
   "requesterName": "Requester name",
   "requests": "Requests",
+  "requestsTotal": "Requests (total)",
   "requireSshKey": "Require SSH key",
   "requiredTagField": "Required tag",
   "requiringAttention": "Requiring attention",
@@ -2272,6 +2273,7 @@
   "thresholds.abandonedKinesisStreams": "Consider a Kinesis Data Stream abandoned if it has not performed data operations for the last {input} days",
   "thresholds.abandonedLoadBalancers.1.bytesSentThreshold": "its average bytes sent is less than {input}",
   "thresholds.abandonedLoadBalancers.2.packetsSentThreshold": "its average packets sent is less than {input}",
+  "thresholds.abandonedLoadBalancers.3.requestsThreshold": "its average requests is less than {input}",
   "thresholds.abandonedLoadBalancers.intro": "Consider a Load Balancer abandoned if for the last {input} days",
   "thresholds.abandonedNebiusS3Buckets.dataSizeThreshold": "its average data size has been less than {input} megabytes",
   "thresholds.abandonedNebiusS3Buckets.deleteRequestsQuantityThreshold": "its DELETE requests quantity has been less than {input}",
