OSN-790. Add support for metric unit property

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -2373,6 +2373,7 @@
   "unavailable": "Unavailable",
   "uncoveredExpenses": "Uncovered expenses",
   "uncoveredUsage": "Uncovered usage",
+  "unit": "Unit",
   "unknown": "Unknown",
   "unlimited": "Unlimited",
   "unmark": "Unmark",
