OSN-786. Update helper message ID for savings with minimal commitment
- Changed the helper message ID in the ReservedInstances component to
reflect the correct translation key.
- Added a new translation entry for the savings with minimal commitment
help message in the app.json file.

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -1980,6 +1980,7 @@
   "savingsWithAverageCommitment": "Savings with average commitment",
   "savingsWithAverageCommitmentHelp": "Savings per month with purchase of Standard RI for 12 months with \"All Upfront\" payment option",
   "savingsWithMinimalCommitment": "Savings with minimal commitment",
+  "savingsWithMinimalCommitmentHelp": "Savings per month with purchase of Convertible RI for 12 months with \"No Upfront\" payment option",
   "scannedObjects": "Scanned objects",
   "scheduleImport": "Schedule import",
   "scheduledAt": "Scheduled at {label}",
